fixed off screen on mobiole -_-

--- a/src/App.css
+++ b/src/App.css
@@ -36,10 +36,3 @@
     transform: rotate(360deg);
   }
 }
-
-.aboutUs {
-  margin-top: 20px !important;
-  margin-bottom: 20px !important;
-  min-width: 75vh;
-  min-height: 75vh;
-}
